force-app/main/default/objects/Baby__c/fields/Released_CT__c.field-meta.xml
<CustomField>
    <fullName>Released_CT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Released CT</label>
    <type>Checkbox</type>
</CustomField>