force-app/main/default/objects/Baby__c/fields/Released_PT__c.field-meta.xml
<CustomField>
    <fullName>Released_PT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Released PT</label>
    <type>Checkbox</type>
</CustomField>