force-app/main/default/objects/Baby__c/fields/SDNA_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>SDNA_Unique_ID__c</fullName>
    <description>Populated by processing lab.</description>
    <label>SDNA Unique ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>