force-app/main/default/objects/Baby__c/fields/Send_Birthday_Card__c.field-meta.xml
<CustomField>
    <fullName>Send_Birthday_Card__c</fullName>
    <description>14 days before baby&apos;s birthday, send card with Handwrytten.</description>
    <formula>If ( This_Year_s_BDay__c  - 14 = TODAY(),

 TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send Birthday Card</label>
    <type>Checkbox</type>
</CustomField>