force-app/main/default/objects/Baby__c/fields/Sequence_DNA__c.field-meta.xml
<CustomField>
    <fullName>Sequence_DNA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sequence DNA</label>
    <type>Checkbox</type>
</CustomField>