force-app/main/default/objects/Baby__c/fields/Sequence_DNA_ID__c.field-meta.xml
<CustomField>
    <fullName>Sequence_DNA_ID__c</fullName>
    <label>Sequence DNA ID Do Not Use</label>
    <length>40</length>
    <type>Text</type>
</CustomField>