force-app/main/default/objects/Baby__c/fields/Sequence_DNA_Order__c.field-meta.xml
<CustomField>
    <fullName>Sequence_DNA_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sequence DNA Order</label>
    <referenceTo>fw1__Invoice__c</referenceTo>
    <relationshipName>Baby_del1</relationshipName>
    <type>Lookup</type>
</CustomField>