force-app/main/default/objects/Baby__c/fields/Sequence_DNA_Status__c.field-meta.xml
<CustomField>
    <fullName>Sequence_DNA_Status__c</fullName>
    <label>Sequence DNA Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ordered</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>Data Received</fullName>
            </value>
            <value>
                <fullName>Audit in Progress</fullName>
            </value>
            <value>
                <fullName>Review Required</fullName>
            </value>
            <value>
                <fullName>Client Informed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>