force-app/main/default/objects/Baby__c/fields/Sex_of_Child__c.field-meta.xml
<CustomField>
    <fullName>Sex_of_Child__c</fullName>
    <label>Sex of Child</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Non-Binary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>