force-app/main/default/objects/Baby__c/fields/This_Year_s_BDay__c.field-meta.xml
<CustomField>
    <fullName>This_Year_s_BDay__c</fullName>
    <description>Used to send Handwrytten Cards.</description>
    <formula>DATE(YEAR (TODAY()),month( Collection_Date__c ),day( Collection_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>This Year&apos;s BDay</label>
    <type>Date</type>
</CustomField>