force-app/main/default/objects/Baby__c/fields/TNC_Cook__c.field-meta.xml
<CustomField>
    <fullName>TNC_Cook__c</fullName>
    <description>Imported from Lab to Baby 2017</description>
    <inlineHelpText>Import of Cook&apos;s TNC, used for PDF certificates before 2017</inlineHelpText>
    <label>TNC (Cook)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>