force-app/main/default/objects/Baby__c/fields/TNCx10_6_Post_Processing_2nd_unit__c.field-meta.xml
<CustomField>
    <fullName>TNCx10_6_Post_Processing_2nd_unit__c</fullName>
    <inlineHelpText>Used when cord blood is stored in two units.</inlineHelpText>
    <label>TNCx10^6 Post-Processing (2nd unit)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>