force-app/main/default/objects/Baby__c/fields/TNCx10_6_pre__c.field-meta.xml
<CustomField>
    <fullName>TNCx10_6_pre__c</fullName>
    <inlineHelpText>Pre-processing. Entered as a number, maximum four digits and two decimal places. For example, 1123.45.</inlineHelpText>
    <label>TNCx10^6 Pre-Processing</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>