force-app/main/default/objects/Baby__c/fields/Trigger_One_Minute_Delay__c.field-meta.xml
<CustomField>
    <fullName>Trigger_One_Minute_Delay__c</fullName>
    <description>Used to populate Account and Contact with Process Flow.</description>
    <formula>CreatedDate - 0.0409</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trigger One Minute Delay</label>
    <type>DateTime</type>
</CustomField>