force-app/main/default/objects/Baby__c/fields/Viability__c.field-meta.xml
<CustomField>
    <fullName>Viability__c</fullName>
    <description>Entered as a percent. Maximum is 100%. Can be expressed to one decimal place. For example, 98.7%</description>
    <label>Viability (%)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>