force-app/main/default/objects/Baby__c/fields/Vials_for_CT__c.field-meta.xml
<CustomField>
    <fullName>Vials_for_CT__c</fullName>
    <label># of Vials for CT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>