force-app/main/default/objects/Baby__c/validationRules/My_Genome_ISBT_Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>My_Genome_ISBT_Required_Fields</fullName>
    <active>true</active>
    <description>This validation rule will validate the fields are populated to allow the ISBT to be updated.</description>
    <errorConditionFormula>if( $Setup.Americord_Settings__c.Bypass_Validation_Rule__c, false,
    (
        AND(
            NOT(ISBLANK( ISBT_My_Genome__c )),
            OR(
                ISBLANK( LPI_My_Genome__c ),
                ISBLANK(Collection_Date__c)
            )
        )
    )
)</errorConditionFormula>
    <errorMessage>In order to populate the ISBT for My Genome you must first populate the LPI and the Collection Date for My Genome.</errorMessage>
</ValidationRule>