force-app/main/default/objects/Baby__c/validationRules/My_Newborn_LPI_Updated_and_Not_Ordered.validationRule-meta.xml
<ValidationRule>
    <fullName>My_Newborn_LPI_Updated_and_Not_Ordered</fullName>
    <active>true</active>
    <description>This rule will check to make sure the My Newborn has been ordered before allowing the.user to update the LPI.</description>
    <errorConditionFormula>IF( $Setup.Americord_Settings__c.Bypass_Validation_Rule__c,FALSE,
    ( 
        AND(
            NOT(ISBLANK(LPI_My_Newborn__c)), 
            Lab__r.Cord_Blood_Order__r.Newborn_Genome_Ordered__c  = 0,
            Lab__r.Cord_Blood_Order__r.Newborn_Panel_Ordered__c = 0        
        )
    )
)</errorConditionFormula>
    <errorMessage>You cannot update the My Newborn LPI without ordering that service.</errorMessage>
</ValidationRule>