force-app/main/default/objects/Baby__c/validationRules/My_Newborn_Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>My_Newborn_Required_Fields</fullName>
    <active>true</active>
    <description>This validation rule will verify that all required fields are populated for the My Newborn integration.</description>
    <errorConditionFormula>IF( $Setup.Americord_Settings__c.Bypass_Validation_Rule__c,FALSE,
    ( 
        AND(
            NOT(ISBLANK(LPI_My_Newborn__c)),
            OR(             
            	AND(
            		ISBLANK(Lab__r.Birth_Date_from_Courier__c),
            		ISBLANK(Lab__r.Cord_Blood_Order__r.fw1__Invoice_Date__c )
            	),
                ISBLANK(Lab__r.Mother_s_Phone__c),
                ISBLANK(Lab__r.Mothers_Email__c),
                ISPICKVAL(Lab__r.Shipping_State_new__c, &apos;&apos;), 
                ISBLANK( Lab__r.Shipping_City__c ) ,
                ISBLANK( Lab__r.Shipping_Street__c ) ,
                ISPICKVAL(Lab__r.Shipping_Country_new__c, &apos;&apos;)
            )
        )
    )
)</errorConditionFormula>
    <errorMessage>Required My Newborn fields not populated. You must enter Mother&apos;s Email, Mother&apos;s Phone Number, Shipping information on the Lab record and Birthdate from Courier/Collection Date on the Baby record.</errorMessage>
</ValidationRule>