force-app/main/default/objects/Baby__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AC_Certificate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LPI_My_Newborn__c</field>
        <operation>contains</operation>
        <value>W</value>
    </filters>
    <label>All</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>