force-app/main/default/objects/Baby__c/listViews/Audit_Missing_Data.listView-meta.xml
<ListView>
    <fullName>Audit_Missing_Data</fullName>
    <booleanFilter>(1 or 2 or 3 or 4 or 5 or 6) And (7 or 8 or 9 or 10)</booleanFilter>
    <columns>NAME</columns>
    <columns>Kit_ID__c</columns>
    <columns>Name_of_Child__c</columns>
    <columns>Collection_Date__c</columns>
    <columns>Cord_Blood_Recieved__c</columns>
    <columns>CB_Volume_ml__c</columns>
    <columns>Cord_Blood_Cryogenically_Preserved__c</columns>
    <columns>Cord_Tissue_Cryogenically_Preserved__c</columns>
    <columns>Placenta_Tissue_Cryogenically_Preserved__c</columns>
    <columns>LPI_CB__c</columns>
    <columns>LPI_CT__c</columns>
    <columns>LPI_PT__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Cord_Blood_Cryogenically_Preserved__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Cord_Tissue_Cryogenically_Preserved__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Placenta_Tissue_Cryogenically_Preserved__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>LPI_CB__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>LPI_CT__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>LPI_PT__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CB_Volume_ml__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Collection_Date__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Name_of_Child__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Cord_Blood_Recieved__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Audit - Missing Data</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>