force-app/main/default/objects/Baby__c/listViews/Lab_Americord_All_Collections.listView-meta.xml
<ListView>
    <fullName>Lab_Americord_All_Collections</fullName>
    <columns>NAME</columns>
    <columns>Folder_ID__c</columns>
    <columns>Lab__c</columns>
    <columns>Kit_ID__c</columns>
    <columns>Collection_Date__c</columns>
    <columns>LPI_CB__c</columns>
    <columns>LPI_CT__c</columns>
    <columns>LPI_PT__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Processing_Lab__c</field>
        <operation>equals</operation>
        <value>Americord</value>
    </filters>
    <label>Lab Americord - All Collections</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <portalRole>VitalantLabPartnerExecutive</portalRole>
        <portalRole>VitalantLabPartnerManager</portalRole>
        <portalRole>VitalantLabPartnerUser</portalRole>
    </sharedTo>
</ListView>