force-app/main/default/objects/Baby__c/listViews/Lab_Americord_Missing_PT_Data.listView-meta.xml
<ListView>
    <fullName>Lab_Americord_Missing_PT_Data</fullName>
    <columns>Collection_Date__c</columns>
    <columns>Folder_ID__c</columns>
    <columns>Lab__c</columns>
    <columns>NAME</columns>
    <columns>Placenta_Tissue_Cryogenically_Preserved__c</columns>
    <columns>PT_Sterility_Result_AST__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Processing_Lab__c</field>
        <operation>equals</operation>
        <value>Americord</value>
    </filters>
    <filters>
        <field>Placenta_Tissue_Cryogenically_Preserved__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PT_Sterility_Result_AST__c</field>
        <operation>equals</operation>
    </filters>
    <label>Lab Americord - Missing PT Data</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <portalRole>VitalantLabPartnerExecutive</portalRole>
        <portalRole>VitalantLabPartnerManager</portalRole>
        <portalRole>VitalantLabPartnerUser</portalRole>
    </sharedTo>
</ListView>