force-app/main/default/objects/Baby__c/listViews/Lab_Americord_Update_Blood_Type.listView-meta.xml
<ListView>
    <fullName>Lab_Americord_Update_Blood_Type</fullName>
    <booleanFilter>1 AND (2 or 3) AND 4</booleanFilter>
    <columns>NAME</columns>
    <columns>Folder_ID__c</columns>
    <columns>Lab__c</columns>
    <columns>Kit_ID__c</columns>
    <columns>Baby_Blood_Type__c</columns>
    <columns>CD34x10_6__c</columns>
    <columns>DCS_LU__c</columns>
    <columns>Collection_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Processing_Lab__c</field>
        <operation>equals</operation>
        <value>Americord</value>
    </filters>
    <filters>
        <field>CD34x10_6__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Baby_Blood_Type__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>DCS_LU__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Lab Americord - Update Blood Type</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <portalRole>VitalantLabPartnerExecutive</portalRole>
        <portalRole>VitalantLabPartnerManager</portalRole>
        <portalRole>VitalantLabPartnerUser</portalRole>
    </sharedTo>
</ListView>