force-app/main/default/objects/Baby__c/listViews/Lab_Cryopoint_All_Collections.listView-meta.xml
<ListView>
    <fullName>Lab_Cryopoint_All_Collections</fullName>
    <columns>NAME</columns>
    <columns>Kit_ID__c</columns>
    <columns>Collection_Date__c</columns>
    <columns>LPI_CB__c</columns>
    <columns>LPI_CT__c</columns>
    <columns>LPI_PT__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Processing_Lab__c</field>
        <operation>equals</operation>
        <value>Cryopoint</value>
    </filters>
    <label>Lab Cryopoint - All Collections</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <portalRoleAndSubordinates>NewLabPartnerExecutive</portalRoleAndSubordinates>
        <portalRoleAndSubordinates>NewLabPartnerManager</portalRoleAndSubordinates>
        <portalRoleAndSubordinates>NewLabPartnerUser</portalRoleAndSubordinates>
    </sharedTo>
</ListView>