force-app/main/default/objects/Baby__c/listViews/Lab_Cryopoint_Audit_Baby_Data.listView-meta.xml
<ListView>
    <fullName>Lab_Cryopoint_Audit_Baby_Data</fullName>
    <booleanFilter>1 AND 4 and (2 or 3 or (8 and (5 or 6 or 10)) or (9 and 7))</booleanFilter>
    <columns>NAME</columns>
    <columns>DCS_LU__c</columns>
    <columns>Collection_Date__c</columns>
    <columns>Name_of_Child__c</columns>
    <columns>Cord_Blood_Recieved__c</columns>
    <columns>CB_Volume_ml__c</columns>
    <columns>TNCx10_6_pre__c</columns>
    <columns>Viability__c</columns>
    <columns>Cord_Blood_Cryogenically_Preserved__c</columns>
    <columns>TNCx10_6_post__c</columns>
    <columns>Cord_Tissue_Length_cm__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Processing_Lab__c</field>
        <operation>equals</operation>
        <value>CryoPoint</value>
    </filters>
    <filters>
        <field>Collection_Date__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Name_of_Child__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>DCS_LU__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CB_Volume_ml__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>TNCx10_6_pre__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>TNCx10_6_post__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Cord_Blood_Recieved__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Cord_Blood_Cryogenically_Preserved__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Viability__c</field>
        <operation>equals</operation>
    </filters>
    <label>Lab Cryopoint - Audit Baby Data</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <portalRole>NewLabPartnerExecutive</portalRole>
        <portalRole>NewLabPartnerManager</portalRole>
        <portalRole>NewLabPartnerUser</portalRole>
    </sharedTo>
</ListView>